--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bienvenue sur mon site GitHub Pages</title>
+    <title>Bienvenue sur ma page GitHub</title>
 </head>
 <body>
-    <h1>Hello, world!</h1>
-    <p>Voici ma première page GitHub Pages.</p>
-</body>
-</html>
+    <h1>Bienvenue sur ma page GitHub</h1>
+    <p></p>
 
+    <h2>Mes projets de data analyse</h2>
+    <ul>
+        <li>Rapport CPAM</li>
+        <li>Rapport Bellabeat</li>
+    </ul>
+</body>
