--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <h2>Mes projets de data analyse</h2>
     <ul>
-        <li>Rapport CPAM</li>
-        <li>Rapport Bellabeat</li>
+        <li>[Rapport CPAM](https://docs.google.com/presentation/d/e/2PACX-1vRVgOzcnTvWAV5TRWohsDs9n_8aqBdEHkEJT7uTlSakcAmZ84gct5ACZ4zKF9UBassS-up8g5HpO3vZ/pub?start=true&loop=true&delayms=3000)</li>
+        <li>[Rapport Bellabeat](https://docs.google.com/presentation/d/e/2PACX-1vSu1zqhGeMOSQJXh9MEtGP2MOFpy7bBoLnW5KvPijUO2XHmS6zXIndi_mMcNMaApvOcfRM-62TC2VXx/pub?start=true&loop=true&delayms=3000)</li>
     </ul>
 </body>
