--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
             <h1>Isabelle Pilpré</h1>
             <h2><span>Data <span class="accent">Analyst</span></h2>
-              <p>Certified Data Analyst through the Google Data Analytics Professional Certificate.<br/>
-                Skilled in problem-solving and generating insightful reports. Adaptable with strong knowledge of SQL, BigQuery, Python, R, Google Sheets, and Tableau. Transforms complex data into actionable insights, supported by clear and relevant visualizations.</p>
+              <p>Welcome to my Data Analysis Projects</p>
           </div>
           <div class="col-lg-5 order-1 order-lg-2">
             <img src="assets/img/data-analyst.svg" class="img-fluid" alt="">
@@ -79,7 +78,7 @@
               <div class="icon-box">
                 <div class="icon"><i class="bi bi-watch"></i></div>
                 <h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vSu1zqhGeMOSQJXh9MEtGP2MOFpy7bBoLnW5KvPijUO2XHmS6zXIndi_mMcNMaApvOcfRM-62TC2VXx/pub?start=true&loop=true&delayms=3000" class="stretched-link">Bellabeat</a></h4>
-                <p>Report on smart watch activity</p>
+                <p>Smart Device Usage Analysis</p>
               </div>
             </div><!--End Icon Box -->
 
@@ -87,7 +86,7 @@
               <div class="icon-box">
                 <div class="icon"><i class="bi bi-capsule-pill"></i></div>
                 <h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vRVgOzcnTvWAV5TRWohsDs9n_8aqBdEHkEJT7uTlSakcAmZ84gct5ACZ4zKF9UBassS-up8g5HpO3vZ/pub?start=true&loop=true&delayms=3000" class="stretched-link">CPAM</a></h4>
-                <p>Report on prevalence of 5 types of cancers</p>
+                <p>EDA for Cancer Prevalence in France</p>
               </div>
             </div><!--End Icon Box -->
 
