--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
           <div class="col-lg-8 d-flex flex-column justify-content-center">
             <h1>Isabelle Pilpré</h1>
             <h2>Data <span class="accent">Analyst</span></h2>
-            <p>Welcome to my Data Analysis Projects page. You can also check out my <a href="https://github.com/isa-pilpre">GitHub profile</a> to see the code for each project.</p>
+            <p>Welcome to my Data Analysis Projects page.</p>
+            <p>You can also check out my <a href="https://github.com/isa-pilpre">GitHub profile</a> to review the code for each project.</p>
           </div>
         </div>
       </div>
@@ -61,7 +62,7 @@
               <div class="icon-box">
                 <div class="icon"><i class="bi bi-watch"></i></div>
                 <h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vSu1zqhGeMOSQJXh9MEtGP2MOFpy7bBoLnW5KvPijUO2XHmS6zXIndi_mMcNMaApvOcfRM-62TC2VXx/pub?start=true&loop=true&delayms=3000" class="stretched-link">Bellabeat</a></h4>
-                <p>Smart Device Usage Analysis</p>
+                <p>Smart Device Usage Analysis (Google Data Analysis Capstone Project)</p>
               </div>
             </div><!--End Icon Box -->
 
