--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <div class="icon-box">
                 <div class="icon"><i class="bi bi-capsule-pill"></i></div>
                 <h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vRVgOzcnTvWAV5TRWohsDs9n_8aqBdEHkEJT7uTlSakcAmZ84gct5ACZ4zKF9UBassS-up8g5HpO3vZ/pub?start=true&loop=true&delayms=3000" class="stretched-link">CPAM</a></h4>
-                <p>Exploratory Data Analysis on Cancer Prevalence in France</p>
+                <p>Exploratory Data Analysis on Cancer Prevalence in France (Google Slides in French)</p>
               </div>
             </div><!--End Icon Box -->
           </div>
