--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
       color: white !important;
     }
 
+    .icon-box-blue {
+      background-color: #007bff !important; /* Blue color */
+      color: white !important;
+    }
+
+    .icon-box-yellow {
+      background-color: #ffc107 !important; /* Yellow color */
+      color: white !important;
+    }
+
     /* Ensure text in icon-boxes is white */
     .icon-box .icon, .icon-box h4.title, .icon-box p {
       color: white !important;
@@ -96,22 +106,45 @@
 
       <div class="icon-boxes position-relative" data-aos="fade-up" data-aos-delay="200">
         <div class="container position-relative">
-          <div class="row gy-3 mt-2 justify-content-center"> <!-- Reduced spacing -->
+          <div class="row gy-3 mt-2 justify-content-center">
+            <!-- Bellabeat Icon Box -->
             <div class="col-xl-3 col-md-6">
-              <div class="icon-box icon-box-green"> <!-- Green for Bellabeat -->
+              <div class="icon-box icon-box-green">
                 <div class="icon"><i class="bi bi-watch"></i></div>
                 <h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vSu1zqhGeMOSQJXh9MEtGP2MOFpy7bBoLnW5KvPijUO2XHmS6zXIndi_mMcNMaApvOcfRM-62TC2VXx/pub?start=true&loop=true&delayms=3000" class="stretched-link">Bellabeat</a></h4>
                 <p>Smart Device Usage Analysis (Google Data Analysis Capstone Project)</p>
               </div>
             </div><!-- End Icon Box -->
 
+            <!-- CPAM Icon Box -->
             <div class="col-xl-3 col-md-6">
-              <div class="icon-box icon-box-orange"> <!-- Orange for CPAM -->
+              <div class="icon-box icon-box-orange">
                 <div class="icon"><i class="bi bi-capsule-pill"></i></div>
                 <h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vRVgOzcnTvWAV5TRWohsDs9n_8aqBdEHkEJT7uTlSakcAmZ84gct5ACZ4zKF9UBassS-up8g5HpO3vZ/pub?start=true&loop=true&delayms=3000" class="stretched-link">CPAM</a></h4>
                 <p>Exploratory Data Analysis on Cancer Prevalence in France (Google Slides in French)</p>
               </div>
             </div><!-- End Icon Box -->
+
+            <!-- New Otsokop Icon Box -->
+            <div class="col-xl-3 col-md-6">
+              <div class="icon-box icon-box-blue">
+                <div class="icon"><i class="bi bi-bar-chart"></i></div>
+                <h4 class="title">Otsokop</h4>
+                <p>Monitoring of Business KPIs such as daily revenue, average basket case, gross margin.</p>
+                <p><em>Private project (confidential business data)</em></p>
+              </div>
+            </div><!-- End Icon Box -->
+
+            <!-- New Dental Icon Box -->
+            <div class="col-xl-3 col-md-6">
+              <div class="icon-box icon-box-yellow">
+                <div class="icon"><i class="bi bi-gear"></i></div>
+                <h4 class="title">Dental</h4>
+                <p>Analysis of noise-related hearing impairment of dental assistants.</p>
+                <p><em>Under construction</em></p>
+              </div>
+            </div><!-- End Icon Box -->
+
           </div>
         </div>
       </div>
