--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
               <div class="icon-box icon-box-blue">
                 <div class="icon"><i class="bi bi-bar-chart"></i></div>
                 <h4 class="title">Otsokop</h4>
-                <p>Monitoring of Business KPIs such as daily revenue, average basket case, gross margin.</p>
-                <p><em>Private project (confidential business data)</em></p>
+                <p>Monitoring business KPIs such as weekly revenue, average basket case, gross margin</p>
+                <p><em>Private - Confidential Business Data</em></p>
               </div>
             </div><!-- End Icon Box -->
 
@@ -140,8 +140,8 @@
               <div class="icon-box icon-box-yellow">
                 <div class="icon"><i class="bi bi-gear"></i></div>
                 <h4 class="title">Dental</h4>
-                <p>Analysis of noise-related hearing impairment of dental assistants.</p>
-                <p><em>Under construction</em></p>
+                <p>Analysis of noise-related hearing impairment among dental assistants</p>
+                <p><em>Currently Underway</em></p>
               </div>
             </div><!-- End Icon Box -->
 
