--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="icon"><i class="bi bi-bar-chart"></i></div>
                 <h4 class="title">Otsokop</h4>
                 <p>Monitoring business KPIs such as weekly revenue, average basket case, gross margin</p>
-                <p><em>Private - Confidential Business Data</em></p>
+                <p><em>Private - Confidential Data</em></p>
               </div>
             </div><!-- End Icon Box -->
 
