--- a/index.html
+++ b/index.html
@@ -28,47 +28,62 @@
 
   <!-- Additional Style -->
   <style>
-    /* Adjust padding to bring content higher on the page */
+    /* Ajuster le padding pour réduire l'espace avant le contenu */
     .hero .container {
-      padding-top: 10px; /* Less padding to bring everything higher */
+      padding-top: 0px; /* Réduire encore plus le padding */
     }
 
-    /* Reduce font size of the name and title */
+    /* Réduire le margin-top du hero */
+    .hero {
+      margin-top: 0;
+    }
+
+    /* Réduire le padding-top du body */
+    body {
+      padding-top: 0;
+    }
+
+    /* Ajuster la hauteur du header fixe */
+    .header {
+      height: 60px; /* Ajustez cette valeur selon vos besoins */
+    }
+
+    /* Réduire la taille de la police du nom et du titre */
     .hero h1 {
-      font-size: 2rem; /* Smaller font for the name */
+      font-size: 2rem; /* Taille plus petite pour le nom */
     }
 
     .hero h2 {
-      font-size: 1.5rem; /* Smaller font for the title */
+      font-size: 1.5rem; /* Taille plus petite pour le titre */
     }
 
-    /* Custom colors for project boxes */
+    /* Couleurs personnalisées pour les boîtes de projets */
     .icon-box-green {
-      background-color: #28a745 !important; /* Original green */
+      background-color: #28a745 !important; /* Vert original */
       color: white !important;
     }
     
     .icon-box-orange {
-      background-color: #F5B041 !important; /* Complementary soft orange */
+      background-color: #F5B041 !important; /* Orange doux complémentaire */
       color: white !important;
     }
 
     .icon-box-blue {
-      background-color: #007bff !important; /* Blue color */
+      background-color: #007bff !important; /* Couleur bleue */
       color: white !important;
     }
 
     .icon-box-yellow {
-      background-color: #ffc107 !important; /* Yellow color */
+      background-color: #ffc107 !important; /* Couleur jaune */
       color: white !important;
     }
 
-    /* Ensure text in icon-boxes is white */
+    /* Assurer que le texte dans les boîtes est blanc */
     .icon-box .icon, .icon-box h4.title, .icon-box p {
       color: white !important;
     }
     
-    /* Adjust icon box padding */
+    /* Ajuster le padding des boîtes d'icônes */
     .icon-boxes .icon-box {
       padding: 20px !important;
       border-radius: 8px;
@@ -112,7 +127,7 @@
               <div class="icon-box icon-box-green">
                 <div class="icon"><i class="bi bi-watch"></i></div>
                 <h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vSu1zqhGeMOSQJXh9MEtGP2MOFpy7bBoLnW5KvPijUO2XHmS6zXIndi_mMcNMaApvOcfRM-62TC2VXx/pub?start=true&loop=true&delayms=3000" class="stretched-link">Bellabeat</a></h4>
-                <p>Smart Device Usage Analysis (Google Data Analysis Capstone Project)</p>
+                <p>Smart Device Usage Analysis - Google Data Analysis Capstone Project <em>(Google Slides in English)</em></p>
               </div>
             </div><!-- End Icon Box -->
 
@@ -121,7 +136,7 @@
               <div class="icon-box icon-box-orange">
                 <div class="icon"><i class="bi bi-capsule-pill"></i></div>
                 <h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vRVgOzcnTvWAV5TRWohsDs9n_8aqBdEHkEJT7uTlSakcAmZ84gct5ACZ4zKF9UBassS-up8g5HpO3vZ/pub?start=true&loop=true&delayms=3000" class="stretched-link">CPAM</a></h4>
-                <p>Exploratory Data Analysis on Cancer Prevalence in France (Google Slides in French)</p>
+                <p>Exploratory Data Analysis on Cancer Prevalence in France <em>(Google Slides in French)</em></p>
               </div>
             </div><!-- End Icon Box -->
 
