--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
               <div class="icon-box icon-box-green">
                 <div class="icon"><i class="bi bi-watch"></i></div>
                 <h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vSu1zqhGeMOSQJXh9MEtGP2MOFpy7bBoLnW5KvPijUO2XHmS6zXIndi_mMcNMaApvOcfRM-62TC2VXx/pub?start=true&loop=true&delayms=3000" class="stretched-link">Bellabeat</a></h4>
-                <p>Smart Device Usage Analysis - Google Data Analysis Capstone Project <em>(Google Slides in English)</em></p>
+                <p>Smart device usage trends - Data analysis capstone project </p>
+                <p><em>(Google Slides report in English)</em></p>
               </div>
             </div><!-- End Icon Box -->
 
@@ -136,7 +137,8 @@
               <div class="icon-box icon-box-orange">
                 <div class="icon"><i class="bi bi-capsule-pill"></i></div>
                 <h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vRVgOzcnTvWAV5TRWohsDs9n_8aqBdEHkEJT7uTlSakcAmZ84gct5ACZ4zKF9UBassS-up8g5HpO3vZ/pub?start=true&loop=true&delayms=3000" class="stretched-link">CPAM</a></h4>
-                <p>Exploratory Data Analysis on Cancer Prevalence in France <em>(Google Slides in French)</em></p>
+                <p>Exploratory data analysis on cancer prevalence in France<p>
+                <p><em>(Google Slides report in French)</em></p>
               </div>
             </div><!-- End Icon Box -->
 
