--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="icon"><i class="bi bi-watch"></i></div>
                 <h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vSu1zqhGeMOSQJXh9MEtGP2MOFpy7bBoLnW5KvPijUO2XHmS6zXIndi_mMcNMaApvOcfRM-62TC2VXx/pub?start=true&loop=true&delayms=3000" class="stretched-link">Bellabeat</a></h4>
                 <p>Smart device usage trends - Data analysis capstone project </p>
-                <p><em>(Google Slides report in English)</em></p>
+                <p><em>Google Slides report in English</em></p>
               </div>
             </div><!-- End Icon Box -->
 
@@ -138,7 +138,7 @@
                 <div class="icon"><i class="bi bi-capsule-pill"></i></div>
                 <h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vRVgOzcnTvWAV5TRWohsDs9n_8aqBdEHkEJT7uTlSakcAmZ84gct5ACZ4zKF9UBassS-up8g5HpO3vZ/pub?start=true&loop=true&delayms=3000" class="stretched-link">CPAM</a></h4>
                 <p>Exploratory data analysis on cancer prevalence in France<p>
-                <p><em>(Google Slides report in French)</em></p>
+                <p><em>Google Slides report in French</em></p>
               </div>
             </div><!-- End Icon Box -->
 
@@ -147,7 +147,7 @@
               <div class="icon-box icon-box-blue">
                 <div class="icon"><i class="bi bi-bar-chart"></i></div>
                 <h4 class="title">Otsokop</h4>
-                <p>Monitoring business KPIs such as weekly revenue, average basket case, gross margin</p>
+                <p>Monitoring business KPIs such as weekly revenue, average basket size, gross margin</p>
                 <p><em>Private - Confidential Data</em></p>
               </div>
             </div><!-- End Icon Box -->
