--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
             <div class="col-xl-3 col-md-6">
               <div class="icon-box icon-box-orange">
                 <div class="icon"><i class="bi bi-capsule-pill"></i></div>
-                <h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vRVgOzcnTvWAV5TRWohsDs9n_8aqBdEHkEJT7uTlSakcAmZ84gct5ACZ4zKF9UBassS-up8g5HpO3vZ/pub?start=true&loop=true&delayms=3000" class="stretched-link">CPAM</a></h4>
+                <!--h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vRVgOzcnTvWAV5TRWohsDs9n_8aqBdEHkEJT7uTlSakcAmZ84gct5ACZ4zKF9UBassS-up8g5HpO3vZ/pub?start=true&loop=true&delayms=3000" class="stretched-link">CPAM</a></h4-->
                 <p>Exploratory data analysis on cancer prevalence in France<p>
-                <p><em>Google Slides report in French</em></p>
+                <p><em>Google Slides report in progress - Available soon</em></p>
               </div>
             </div><!-- End Icon Box -->
 
