--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="col-xl-3 col-md-6">
               <div class="icon-box icon-box-orange">
                 <div class="icon"><i class="bi bi-capsule-pill"></i></div>
-                <!--h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vR_b-1Kmh7NPm2KQrFdETGrrzxkilidfTf-8DDKv-ql13PWh-kYvaHS1qHq_NzOJ-GzZSr0gsDGnsqe/pub?start=false&loop=true&delayms=5000" class="stretched-link">CPAM</a></h4-->
+                <h4 class="title"><a href="https://docs.google.com/presentation/d/e/2PACX-1vR_b-1Kmh7NPm2KQrFdETGrrzxkilidfTf-8DDKv-ql13PWh-kYvaHS1qHq_NzOJ-GzZSr0gsDGnsqe/pub?start=false&loop=true&delayms=5000" class="stretched-link">CPAM</a></h4>
                 <p>Exploratory data analysis on cancer prevalence in France<p>
                 <p><em>Google Slides report in French</em></p>
               </div>
