--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               <div class="icon-box icon-box-yellow">
                 <div class="icon"><i class="bi bi-database-fill-check"></i></div>
                   <h4 class="title"><a href="https://www.funwithsql.com/" class="stretched-link">Fun With SQL</a></h4>
-                <p>Website that makes learning SQL accessible and enjoyable</p>
+                <p>Creation of a website that makes learning SQL accessible and enjoyable</p>
               </div>
             </div><!-- End Icon Box -->
 
