Added a box for `funwithsql.com` (#2)

--- a/index.html
+++ b/index.html
@@ -152,13 +152,12 @@
               </div>
             </div><!-- End Icon Box -->
 
-            <!-- New Dental Icon Box -->
+            <!-- New FunWithSQL Icon Box -->
             <div class="col-xl-3 col-md-6">
               <div class="icon-box icon-box-yellow">
-                <div class="icon"><i class="bi bi-gear"></i></div>
-                <h4 class="title">Dental</h4>
-                <p>Analysis of noise-related hearing impairment among dental assistants</p>
-                <p><em>Currently Underway</em></p>
+                <div class="icon"><i class="bi bi-database-fill-check"></i></div>
+                  <h4 class="title"><a href="https://www.funwithsql.com/" class="stretched-link">Fun With SQL</a></h4>
+                <p>Creation of a website that makes learning SQL accessible and enjoyable</p>
               </div>
             </div><!-- End Icon Box -->
 
